<resources>
    <string name="app_name">Catan Dice Stats</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_12">12</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_game">game</string>
    <string name="_username">User Name</string>
    <string name="_full_name">Full Name</string>
    <string name="_players">players</string>
    <string name="_stats">stats</string>
    <string name="_player_stats">player stats</string>
    <string name="_player_name">Loser</string>
    <string name="_winner">Winner</string>
    <string name="_player_wins">10</string>
    <string name="_player_games">40</string>
    <string name="_player_pct">25%</string>
    <string name="_submit_players">submit</string>
    <string name="_number">Number</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

</resources>