<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_game"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/_game" />
    <item android:id="@+id/nav_player_stats"
        android:icon="@drawable/ic_baseline_show_chart_24"
        android:title="@string/_player_stats" />
    <item android:id="@+id/nav_stats"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/_stats" />
    <item android:id="@+id/nav_players"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/_players" />
    <item android:id="@+id/nav_add_player"
        android:icon="@drawable/ic_baseline_person_add_alt_1_24"
        android:title="@string/_players" />

</menu>